deployments/shared-services/gateway.yaml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: cluster-gw
  namespace: shared-services
  annotations:
    community.f5.com/demo-source: https://github.com/memes/f5-ai-solutions-for-google-cloud
    community.f5.com/email: m.emes@f5.com
    community.f5.com/owner: emes
spec:
  gatewayClassName: gke-l7-regional-external-managed
  addresses:
    - type: NamedAddress
      value: ai-demo-gke-gw-us-ce1-pub  # kpt-set: ${shared-services-gateway-address}
  listeners:
    - name: cluster-redirect
      protocol: HTTP
      port: 80
      allowedRoutes:
        kinds:
          - kind: HTTPRoute
        namespaces:
          from: Selector
          selector:
            matchExpressions:
              - key: kubernetes.io/metadata.name
                operator: In
                values:
                  - shared-services
    - name: f5-ai
      hostname: f5-ai.strangelambda.com  # kpt-set: ${shared-services-gateway-f5-ai-host}
      protocol: HTTPS
      port: 443
      tls:
        mode: Terminate
        options:
          networking.gke.io/cert-manager-certs: ai-demo-us-ce1  # kpt-set: ${shared-services-gateway-cert-manager-id}
      allowedRoutes:
        kinds:
          - kind: HTTPRoute
        namespaces:
          from: Selector
          selector:
            matchExpressions:
              - key: kubernetes.io/metadata.name
                operator: In
                values:
                  - cai-moderator
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cluster-http-redirect
  namespace: shared-services
  annotations:
    community.f5.com/demo-source: https://github.com/memes/f5-ai-solutions-for-google-cloud
    community.f5.com/email: m.emes@f5.com
    community.f5.com/owner: emes
spec:
  parentRefs:
    - name: cluster-gw
      namespace: shared-services
      sectionName: cluster-redirect
  rules:
    - name: cluster-redirect
      filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
